<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".labs.Lab3Activity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include"
        android:contentDescription="@string/todo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_lab_3"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_arm"
            android:layout_width="250dp"
            android:layout_height="260dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_fire"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:layout_margin="42dp"
            android:paddingRight="22dp"
            android:paddingLeft="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iv_arm"
            app:layout_constraintStart_toStartOf="@+id/iv_arm"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/iv_litmus"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:contentDescription="@string/todo"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="-30dp"
            android:rotation="270"
            app:layout_constraintLeft_toLeftOf="@+id/iv_arm"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/iv_smoke"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="@+id/iv_test_tube"
            app:layout_constraintStart_toStartOf="@+id/iv_test_tube"
            app:layout_constraintTop_toTopOf="@+id/iv_arm" />

        <ImageView
            android:id="@+id/iv_test_tube"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="80dp"
            app:layout_constraintLeft_toLeftOf="@+id/iv_arm"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_models"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/tools_bg"
        android:paddingHorizontal="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:listitem="@layout/mode_item" />

    <LinearLayout
        android:id="@+id/ll_restart"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="0dp"
        android:background="@drawable/experiment_bg"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <TextView
            android:id="@+id/tv_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zn_s_s_s_zns_s"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginHorizontal="26dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/btn_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingVertical="6dp"
            android:text="@string/restart"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginBottom="54dp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>